--- a/styles/index.css
+++ b/styles/index.css
@@ -86,3 +86,14 @@
     font-size: large;
     margin-top: 10px;
 }
+.pagination{
+    border:2px solid blue;
+    height:3rem;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:0.5rem;
+    button{
+        padding:0.6rem;
+    }
+}
